--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
     <title>Cosmos Testnet Faucet</title>
     <meta name="description" content="A token faucet for Cosmos Testnets.">
     <meta name="author" content="Tendermint, Inc">
+    <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer></script>
   </head>
   <body>
     <noscript>
